Fixs/layout hotfixs (#22)
* :lipstick: Reduce default line height

* :lipstick: Welcome : add margin top to start button

* :lipstick: Improve Result layout : add container to image, avoid having the name overlapped with other elements

* :bug: :lipstick: SharePopup : fix & improve rendering

--- a/frontend/src/assets/styles/base/_reset.scss
+++ b/frontend/src/assets/styles/base/_reset.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  line-height: 1.5;
+  line-height: 1.25;
   -webkit-font-smoothing: antialiased;
 }
 
