--- a/frontend/src/assets/styles/pages/_Welcome.scss
+++ b/frontend/src/assets/styles/pages/_Welcome.scss
@@ -72,6 +72,7 @@
     height: 3.25rem;
     font-size: 1.25rem;
     width: 100%;
+    margin-top: 1rem !important;
 
     &:hover {
       opacity: 0.9;
